[workspace]
members = [
    "crates/dc-gossip",
    "crates/dc-consensus",
    "crates/dc-ledger",
    "crates/dc-poh",
    "crates/dc-rpc",
    "crates/dc-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = "0.37.0"
bincode = "1.3"
