[package]
name = "dc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dc-gossip = { path = "../dc-gossip" }
dc-consensus = { path = "../dc-consensus" }
dc-ledger = { path = "../dc-ledger" }
dc-poh = { path = "../dc-poh" }
dc-rpc = { path = "../dc-rpc" }
