[package]
name = "dc-gossip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc-gossip"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode.workspace = true
solana-sdk = "2.1"
solana-pubkey = "4.2.0"
bitvec = "1.0.1"
solana-bloom = "3.1.13"
solana-hash = "4.3.0"
rand = "0.10"
