[package]
name = "dc-gossip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc-gossip"
path = "src/main.rs"


[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }
solana-sdk = "2.1"
solana-bloom = "2.1"
solana-hash = "2.1"
bitvec = "1.0.1"
rand = "0.10"
reqwest = { version = "0.11", features = ["json"] }
solana-version = "3.1.14"
