[package]
name = "dc-ledger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc-ledger"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
