[package]
name = "dc-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dc-rpc"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
